<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#000000"

    >
    <View
        android:layout_width="match_parent"
        android:visibility="visible"
        android:layout_height="match_parent"/>


    <ImageView
        android:layout_width="match_parent"
        android:background="@drawable/book"
        android:alpha="0.8"
        android:scaleType="centerCrop"
        android:layout_height="match_parent" />



    <TextView
        android:id="@+id/textlogo"
        android:layout_width="wrap_content"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:text="@string/logo_name"
        android:textSize="30dp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorWhite"
        android:layout_height="wrap_content" />


    <Button
        android:id="@+id/btmainsignup"
        android:layout_width="match_parent"
        android:layout_marginBottom="100dp"
        android:text="@string/signup"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/colorWhite"
        android:layout_alignParentBottom="true"
        android:textSize="12dp"
        android:background="@drawable/boutton_transparent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btmainlogin"
        android:layout_width="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/Login"
        android:layout_above="@id/btmainsignup"
        android:textColor="@color/colorRose"
        android:textSize="12dp"
        android:background="@drawable/boutton_white"
        android:layout_height="wrap_content"
        android:onClick="Login2"/>

    <TextView
        android:id="@+id/label0"
        android:text="@string/label1"
        android:layout_width="wrap_content"
        android:textColor="@color/colorWhite"
        android:textSize="16dp"
        android:layout_above="@id/label"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:layout_marginBottom="0dp"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/label"
        android:text="@string/label2"
        android:layout_width="wrap_content"
        android:textSize="12dp"
        android:textColor="@color/colorWhite"
        android:layout_marginBottom="20dp"
        android:layout_above="@id/btmainlogin"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content" />
</RelativeLayout>