<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.loginpage.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_sellbook"
        android:name="com.example.loginpage.ui.SellBooks.SellBooksFragment"
        android:label="Sell Book"
        tools:layout="@layout/fragment_sellbooks" />

    <fragment
        android:id="@+id/nav_myaccount"
        android:name="com.example.loginpage.ui.mybook.MyBookFragment"
        android:label="My Account"
        tools:layout="@layout/fragment_myaccount" />


    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.loginpage.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_logout"

        android:label="Logout"
         />



    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.loginpage.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.loginpage.ui.about.AboutFragment"
        tools:layout="@layout/fragment_about" />
</navigation>